# NCP

./: LICENSE
NCP/: Cargo.toml
NCP/src/: cve_scanner.rs  main.rs  result_csv_parser.rs  result_extractor.rs
