[package]
name = "NCP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde_json="1.0.82"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.4", features = ["rt","rt-multi-thread", "macros"] }
walkdir = "2"
roxmltree = "0.15.1"
percent-encoding = "2.2"